feat: add mock html for table display

--- a/index.html
+++ b/index.html
@@ -3,11 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
     <title>Library | Odin</title>
   </head>
   <body>
     <h1>Library</h1>
+    <table id="library">
+      <caption>
+        Books in my library
+      </caption>
+      <thead>
+        <tr>
+          <th scope="column">Id</th>
+          <th scope="column">Title</th>
+          <th scope="column">Author</th>
+          <th scope="column">Pages</th>
+          <th scope="column">Read?</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>B6CCA77D-B366-4E27-BB41-64917A2EF8B2</td>
+          <td>Foo</td>
+          <td>Foo Author</td>
+          <td>1500</td>
+          <td>Yes</td>
+        </tr>
+        <tr>
+          <td>3D7367AE-5530-4C20-8906-4983A8F8AEAA</td>
+          <td>Bar</td>
+          <td>Bar Author</td>
+          <td>1110</td>
+          <td>No</td>
+        </tr>
+      </tbody>
+    </table>
     <script src="index.js"></script>
   </body>
 </html>
