fix: `displayLibrary` to properly replace children
This fix fixes two things

1. The rows were added to the `table` element instead of the
   `tbody` element.

2. When called multiple times, the rows were appended instead of
   being replaced.

Both of these issues were fixed.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <th scope="column">Read?</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody id="library-entries">
       </tbody>
     </table>
     <script src="index.js"></script>
