--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
           <th scope="column">Read?</th>
         </tr>
       </thead>
-      <tbody id="library-entries">
-      </tbody>
+      <tbody id="library-entries"></tbody>
     </table>
+    <dialog id="new-book-dialog">
+      <form action="#" method="dialog">
+        <legend>New Book</legend>
+        <button>Create</button>
+      </form>
+    </dialog>
     <script src="index.js"></script>
   </body>
 </html>
