feat: add button for showing new-book-dialog

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <button>Create</button>
       </form>
     </dialog>
+    <button id="new-book-button">New Book</button>
     <script src="index.js"></script>
   </body>
 </html>
