--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button>Create</button>
       </form>
     </dialog>
-    <button id="new-book-button">New Book</button>
+    <button id="new-book-dialog-open">New Book</button>
     <script src="index.js"></script>
   </body>
 </html>
