--- a/index.html
+++ b/index.html
@@ -28,23 +28,25 @@
         <legend>New Book</legend>
         <div>
           <label for="new-book-title">Title:</label>
-          <input type="text" id="new-book-title" />
+          <input type="text" name="title" id="new-book-title" required />
         </div>
         <div>
           <label for="new-book-author">Author:</label>
-          <input type="text" id="new-book-author" />
+          <input type="text" name="author" id="new-book-author" required />
         </div>
         <div>
           <label for="new-book-pages">Number of Pages:</label>
-          <input type="number" id="new-book-pages" />
+          <input type="number" name="pages" id="new-book-pages" required />
         </div>
         <div>
           <label for="new-book-read">Read?</label>
-          <input type="checkbox" id="new-book-read" />
+          <input type="checkbox" name="read" id="new-book-read" />
         </div>
         <div>
           <button value="create" id="new-book-dialog-submit">Create</button>
-          <button value="cancel" id="new-book-dialog-close">Cancel</button>
+          <button value="cancel" id="new-book-dialog-close" formnovalidate>
+            Cancel
+          </button>
         </div>
       </form>
     </dialog>
