feat(remove-book/ui): remove `id` column from table, add `remove` column to table

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       </caption>
       <thead>
         <tr>
-          <th scope="column">Id</th>
           <th scope="column">Title</th>
           <th scope="column">Author</th>
           <th scope="column">Pages</th>
           <th scope="column">Read?</th>
+          <th scope="column">Remove Book</th>
         </tr>
       </thead>
       <tbody id="library-entries"></tbody>
