feat(toggle-book): add html and js for book toggling only

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <th scope="column">Pages</th>
           <th scope="column">Read?</th>
           <th scope="column">Remove Book</th>
+          <th scope="column">Toggle read status</th>
         </tr>
       </thead>
       <tbody id="library-entries"></tbody>
